[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/SpriteSheets/pressureplate.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PressurePlate.gd" type="Script" id=2]
[ext_resource path="res://SFX/PressurePlate.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.5, 5 )

[node name="PressurePlate" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -2 )
shape = SubResource( 1 )

[node name="PressedFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_PressurePlate_body_entered"]
